--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">Project-G05</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="categories_array">
+        <item>SMARTPHONES</item>
+        <item>LAPTOPS</item>
+        <item>SKINCARE</item>
+        <item>GROCERIES</item>
+        <item>WOMENS-WATCHES</item>
+    </string-array>
 </resources>
